--- a/app/home/template.hbs
+++ b/app/home/template.hbs
@@ -1,3 +1,12 @@
 <!-- app/home/template.hbs -->
 
-<h1>Home</h1>
+<div class="page-container home-page">
+    <aside class="left">
+        {{profile-glance user=model.user}}
+    </aside>
+
+    <main>
+        {{status-update}}
+        {{chirps-list chirps=model.chirps}}
+    </main>
+</div>
