--- a/app/user/template.hbs
+++ b/app/user/template.hbs
@@ -30,9 +30,9 @@
 <div class="page-container user-page">
 
   <aside>
-    <h1>t4t5</h1>
+    <h1>{{model.user.username}}</h1>
     <p class="description">{{model.user.aboutMe}}</p>
-    <p class="joined">Joined {{model.user.joinedAt}}</p>
+    <p class="joined">Joined {{moment-from-now model.user.joinedAt}}</p>
   </aside>
 
   <main>
