Added compose modal and some animations

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -9,9 +9,15 @@
                 <img class="avatar" src="/images/avatar.jpg" />
                 bernardop
             {{/link-to}}
-            <button class="chirp">Chirp</button>
+            <button class="chirp" {{action 'toggleComposeModal'}}>Chirp</button>
         </nav>
     </div>
 </header>
 
-{{outlet}}
+{{liquid-outlet}}
+
+{{#if showingComposeModal}}
+    {{#modal-dialog translucentOverlay=true close=(action 'toggleComposeModal')}}
+        {{compose-modal dismiss=(action 'toggleComposeModal')}}
+    {{/modal-dialog}}
+{{/if}}
