--- a/app/styles/ui.scss
+++ b/app/styles/ui.scss
@@ -91,3 +91,19 @@ p.error {
   font-size: 15px;
   padding: 9px;
 }
+
+// Styling the modal
+.ember-modal-dialog {
+  max-width: none;
+  padding: 15px;
+  background-color: $bg-color;
+  box-shadow: 0px 2px 4px 0px rgba(black, 0.19);
+  border-radius: 4px;
+  border: none;
+  overflow: hidden;
+  z-index: 1000;
+}
+.ember-modal-overlay.translucent {
+  background-color: rgba(#4C574A, 0.6);
+  z-index: 999;
+}
