--- a/app/components/status-update/template.hbs
+++ b/app/components/status-update/template.hbs
@@ -1,4 +1,4 @@
 <!-- app/components/status-update/template.hbs -->
 
 <img class="avatar" src="/images/avatar.jpg" />
-<button class="card bubble" {{action 'showAlert'}}>What are you doing?</button>
+<button class="card bubble" {{action 'compose'}}>What are you doing?</button>
