--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,14 @@
 // app/styles/app.scss
 
 @import "layout";
+
+@import "ember-modal-dialog/ember-modal-structure";
+@import "ember-modal-dialog/ember-modal-appearance";
+
 @import "ui";
 @import "header";
+
 @import "profile";
+@import "index";
 
 @import "pod-styles";
